--- a/AspNetCoreSpa/wwwroot/Client/app/shared/allProducts.component.html
+++ b/AspNetCoreSpa/wwwroot/Client/app/shared/allProducts.component.html
@@ -1,5 +1,5 @@
 <style>
-    .lalala {
+    .head {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -108,6 +108,11 @@
                                 </button>
                             </td>
                             <td *ngIf="_authService.IsAdmin && !IsCart" class="remove-row">
+                                <button pageScroll href="#form" title={{TitleChange}} class='btn btn-default tatoobutton' (click)='ChangeProd(product.id)' style="float: right">
+                                    <i class='glyphicon glyphicon-pencil'></i> {{Change}}
+                                </button>
+                            </td>
+                            <td *ngIf="_authService.IsAdmin && !IsCart" class="remove-row">
                                 <button title={{TitleRemoveAtAll}} class='btn btn-default tatoobutton' (click)='ShowDialogRemoveAtAll(content, product.id)' style="float: right">
                                     <i class='glyphicon glyphicon-remove-circle'></i> {{Remove}}
                                 </button>
@@ -138,7 +143,7 @@
 
     <ng-template class="temp" #content let-c="close" let-d="dismiss">
         <div class="modal-header">
-            <div class="lalala">
+            <div class="head">
                 <h4 class="modal-title header">{{Header}}</h4>
                 <button type="button" class="close cross" aria-label="Close" (click)="d('Cross click')">
                     <span aria-hidden="true">&times;</span>
