Scretches form started.

--- a/AspNetCoreSpa/wwwroot/Client/app/contacts/contacts.component.html
+++ b/AspNetCoreSpa/wwwroot/Client/app/contacts/contacts.component.html
@@ -15,15 +15,15 @@
     </p>
     <p class="margin2 paragraphhead">
         {{InstagramLabel}}
-        <a href="https://www.instagram.com/martha_bocharova/" class="paragraphtext"> {{Instagram}}</a>
+        <a title="Click to switch to our instagram page" href="https://www.instagram.com/martha_bocharova/" class="paragraphtext"> {{Instagram}}</a>
     </p>
     <p class="margin2 paragraphhead">
         {{TwitterLabel}}
-        <a href="https://www.pinterest.com/pin/542754192577200718/" class="paragraphtext"> {{Twitter}}</a>
+        <a title="Click to switch to our twitter page" href="https://twitter.com/tatooroze" class="paragraphtext"> {{Twitter}}</a>
     </p>
     <p class="margin2 paragraphhead">
         {{VkLabel}}
-        <a href="https://vk.com/id20028415" class="paragraphtext"> {{Vk}}</a>
+        <a title="Click to switch to our vkontakte page" href="https://vk.com/id20028415" class="paragraphtext"> {{Vk}}</a>
     </p>
 </div>
 
