--- a/AspNetCoreSpa/wwwroot/Client/app/help/help.component.html
+++ b/AspNetCoreSpa/wwwroot/Client/app/help/help.component.html
@@ -10,15 +10,15 @@
 
     <div class="text tatooarticle" id="menu">
         <ol class="margin2">
-            <li> <a pageScroll href="#menu"> {{Points[0]}} </a> </li>
-            <li> <a pageScroll href="#theme1"> {{Points[1]}} </a> </li>
-            <li> <a pageScroll href="#theme2"> {{Points[2]}} </a> </li>
-            <li> <a pageScroll href="#theme3"> {{Points[3]}} </a> </li>
-            <li> <a pageScroll href="#theme4"> {{Points[4]}} </a> </li>
-            <li> <a pageScroll href="#theme5"> {{Points[5]}} </a> </li>
-            <li> <a pageScroll href="#theme6"> {{Points[6]}} </a> </li>
-            <li> <a pageScroll href="#theme7"> {{Points[7]}} </a> </li>
-            <li> <a pageScroll href="#theme8"> {{Points[8]}} </a> </li>
+            <li> <a title="Click to read answer to the question" pageScroll href="#menu"> {{Points[0]}} </a> </li>
+            <li> <a title="Click to read answer to the question" pageScroll href="#theme1"> {{Points[1]}} </a> </li>
+            <li> <a title="Click to read answer to the question" pageScroll href="#theme2"> {{Points[2]}} </a> </li>
+            <li> <a title="Click to read answer to the question" pageScroll href="#theme3"> {{Points[3]}} </a> </li>
+            <li> <a title="Click to read answer to the question" pageScroll href="#theme4"> {{Points[4]}} </a> </li>
+            <li> <a title="Click to read answer to the question" pageScroll href="#theme5"> {{Points[5]}} </a> </li>
+            <li> <a title="Click to read answer to the question" pageScroll href="#theme6"> {{Points[6]}} </a> </li>
+            <li> <a title="Click to read answer to the question" pageScroll href="#theme7"> {{Points[7]}} </a> </li>
+            <li> <a title="Click to read answer to the question" pageScroll href="#theme8"> {{Points[8]}} </a> </li>
         </ol>
     </div>
 
@@ -54,7 +54,7 @@
             </li>
             <li>
                 <label id="theme5" class="paragraphhead"> {{Points[4]}} </label>
-                <p> {{Theme5}} <a routerLink="/scretches"> {{Here}}</a> . </p>
+                <p> {{Theme5}} <a title="Click to switch to scretches page" routerLink="/scretches"> {{Here}}</a> . </p>
             </li>
             <li>
                 <label id="theme6" class="paragraphhead"> {{Points[5]}} </label>
@@ -66,11 +66,11 @@
             </li>
             <li>
                 <label id="theme8" class="paragraphhead"> {{Points[7]}} </label>
-                <p> {{Theme8_part1}} <a routerLink="/welcome"> {{Here}} </a> {{Theme8_part2}} <a routerLink="/aboutus"> {{Here}} </a> {{Theme8_part3}} <a routerLink="/aboutus"> {{Shop}}</a> {{Theme8_part4}} <a routerLink="/aboutus"> {{Scretches}} </a>. </p>
+                <p> {{Theme8_part1}} <a title="Click to switch to home page" routerLink="/welcome"> {{Here}} </a> {{Theme8_part2}} <a title="Click to switch to page about the parlor" routerLink="/aboutus"> {{Here}} </a> {{Theme8_part3}} <a title="Click to switch to online shop page" routerLink="/products"> {{Shop}}</a> {{Theme8_part4}} <a title="Click to switch to scretches page" routerLink="/scretches"> {{Scretches}} </a>. </p>
             </li>
             <li>
                 <label id="theme9" class="paragraphhead"> {{Points[8]}} </label>
-                <p> {{Theme9}} <a routerLink="/questions"> {{Page}}</a>. </p>
+                <p> {{Theme9}} <a title="Click to ask additional question" routerLink="/questions"> {{Page}}</a>. </p>
             </li>
         </ol>
     </div>
