--- a/AspNetCoreSpa/wwwroot/Client/app/scretches/scretches.component.scss
+++ b/AspNetCoreSpa/wwwroot/Client/app/scretches/scretches.component.scss
@@ -1,134 +1,165 @@
 /*text styles*/
-.text {
-    font-family: 'TEMPUS SANS ITC';
-    font-weight: bold;
-    color: rgba(41, 43, 41, 0.7);
-}
+.scretches-page {
+    .text {
+        font-family: 'TEMPUS SANS ITC';
+        font-weight: bold;
+        color: rgba(41, 43, 41, 0.7);
+    }
 
-.plaintext {
-    font-size: 4vmin;
-}
+    .plaintext {
+        font-size: 4vmin;
+    }
 
-.heading {
-    font-size: 7vmin;
-    color: rgba(41, 43, 41, 0.9);
-}
+    .heading {
+        font-size: 7vmin;
+        color: rgba(41, 43, 41, 0.9);
+    }
 
-.paragraphhead {
-    color: rgba(41, 43, 41, 0.9);
-}
+    .paragraphhead {
+        color: rgba(41, 43, 41, 0.9);
+    }
 
-.paragraphtext {
-    color: rgba(41, 43, 41, 0.7);
-}
+    .paragraphtext {
+        color: rgba(41, 43, 41, 0.7);
+    }
 
-.heading {
-    font-size: 7vmin;
-    color: rgba(41, 43, 41, 0.9);
-}
+    .heading {
+        font-size: 7vmin;
+        color: rgba(41, 43, 41, 0.9);
+    }
 
-.textfordescription {
-    font-family: 'TEMPUS SANS ITC';
-    font-weight: bold;
-    color: rgba(255, 255, 255, 0.4);
-}
+    .textfordescription {
+        font-family: 'TEMPUS SANS ITC';
+        font-weight: bold;
+        color: rgba(255, 255, 255, 0.4);
+    }
 
-.paragraphheaddescription {
-    color: rgba(255, 255, 255, 0.7);
-}
+    .paragraphheaddescription {
+        color: rgba(255, 255, 255, 0.7);
+    }
 
-.paragraphdescription {
-    color: rgba(255, 255, 255, 0.4);
-}
+    .paragraphdescription {
+        color: rgba(255, 255, 255, 0.4);
+    }
+    /*styles*/
+    .tatoobutton {
+        background-color: #000000;
+        border-color: #FFFFFF;
+    }
 
-/*styles*/
-.tatoobutton {
-    background-color: #000000;
-    border-color: #FFFFFF;
-}
-
-.tatoobutton:hover {
+    .tatoobutton:hover {
         background-color: #464451;
         border-color: #D5D5D5;
-}
+    }
 
-#tatoopanel {
-    background-color: #000000;
-    border-color: #FFFFFF;
-    border-color: #000000;
-    font-size: 3vmin;
-}
+    #tatoopanel {
+        background-color: #000000;
+        border-color: #FFFFFF;
+        border-color: #000000;
+        font-size: 3vmin;
+    }
 
-.margin2 {
-    margin-left: 3%;
-    margin-right: 3%;
-}
+    .margin2 {
+        margin-left: 3%;
+        margin-right: 3%;
+    }
 
-.tatooarticle {
-    background-color: rgba(255, 255, 255, 0.4);
-    width: 100%;
-}
+    .tatooarticle {
+        background-color: rgba(255, 255, 255, 0.4);
+        width: 100%;
+    }
 
-.tatoolable {
-    color: #000000;
-    min-width: 39%;
-    max-width: 39%;
-}
-
-.tatooinput {
-    color: #000000;
-    min-width: 56%;
-    max-width: 56%;
-    margin-right: 1%;
-}
-
-.marginbottom {
-    margin-bottom: 1%;
-}
-
-.tatoodiv {
-    width: 98%;
-    margin: 1%;
-    border-color: #000000;
-    font-family: 'comic sans ms';
-}
-
-@media only screen and (min-width: 800px) {
-    .tatoodiv {
-        width: 50%;
+    .tatoolable {
+        color: #000000;
+        min-width: 39%;
+        max-width: 39%;
     }
 
     .tatooinput {
-        min-width: 59%;
-        max-width: 59%;
+        color: #000000;
+        min-width: 57%;
+        max-width: 57%;
+        margin-right: 1%;
     }
-}
 
-.descriptionback {
-    background-color: rgba(41, 43, 41, 0.7);
-    width: 100%;
-}
+    .marginbottom {
+        margin-bottom: 1%;
+    }
 
-.scretch{
-    cursor: pointer;
-}
+    .tatoodiv {
+        width: 98%;
+        margin: 1%;
+        border-color: #000000;
+        font-family: 'comic sans ms';
+    }
 
-.formtext {
-    font-family: 'comic sans ms';
-    color: black;
-}
+    .descriptionback {
+        background-color: rgba(41, 43, 41, 0.7);
+        width: 100%;
+    }
 
-.lowborder {
-    border-bottom-style: solid;
-    border-bottom-color: #000000;
-    border-left-width: 1px;
-}
+    .scretch {
+        cursor: pointer;
+    }
 
-.inputfile {
-    width: 0.1px;
-    height: 0.1px;
-    opacity: 0;
-    overflow: hidden;
-    position: absolute;
-    z-index: -1;
+    .formtext {
+        font-family: 'comic sans ms';
+        color: black;
+    }
+
+    .lowborder {
+        border-bottom-style: solid;
+        border-bottom-color: #000000;
+        border-left-width: 1px;
+    }
+
+    .inputfile {
+        width: 0.1px;
+        height: 0.1px;
+        opacity: 0;
+        overflow: hidden;
+        position: absolute;
+        z-index: -1;
+    }
+
+    .tatootool {
+        font-size: 2vmin;
+        float: right;
+        color: rgba(41, 43, 41, 0.9);
+        margin-right: 1%;
+    }
+
+    .tatootoolerror {
+        color: red;
+        font-size: 2vmin;
+        float: right;
+        margin-right: 1%;
+    }
+
+    .tatooinputerror {
+        border-color: red;
+        background-color: #F6D9D9;
+        border-width: 1px;
+        border-style: solid;
+    }
+
+    .flexer {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    @media only screen and (min-width: 800px) {
+        .tatoodiv {
+            width: 50%;
+        }
+
+        .tatootool {
+            font-size: 1.5vmin;
+        }
+
+        .tatootoolerror {
+            font-size: 1.5vmin;
+        }
+    }
 }
