--- a/AspNetCoreSpa/wwwroot/Client/app/app.component.html
+++ b/AspNetCoreSpa/wwwroot/Client/app/app.component.html
@@ -10,20 +10,20 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li [routerLinkActive]="['active']"><a [routerLink]="['/welcome']">Home</a></li>
-                    <li [routerLinkActive]="['active']"><a [routerLink]="['/products']">Online Shop</a></li>
-                    <li [routerLinkActive]="['active']"><a [routerLink]="['/scretches']">Scretches</a></li>
-                    <li [routerLinkActive]="['active']"><a [routerLink]="['/contacts']">Contacts</a></li>
-                    <li [routerLinkActive]="['active']"><a [routerLink]="['/aboutus']">About Us</a></li>
-                    <li [routerLinkActive]="['active']"><a [routerLink]="['/help']">FAQ</a></li>
+                    <li title="Click to switch to home page" [routerLinkActive]="['active']"><a [routerLink]="['/welcome']">Home</a></li>
+                    <li title="Click to switch to online shop page" [routerLinkActive]="['active']"><a [routerLink]="['/products']">Online Shop</a></li>
+                    <li title="Click to switch to scretches page" [routerLinkActive]="['active']"><a [routerLink]="['/scretches']">Scretches</a></li>
+                    <li title="Click to switch to contacts page" [routerLinkActive]="['active']"><a [routerLink]="['/contacts']">Contacts</a></li>
+                    <li title="Click to switch to page about the parlor" [routerLinkActive]="['active']"><a [routerLink]="['/aboutus']">About Us</a></li>
+                    <li title="Click to switch to FAQ page" [routerLinkActive]="['active']"><a [routerLink]="['/help']">FAQ</a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li [routerLinkActive]="['active']"><a [routerLink]="['/cart']" *ngIf="authService.IsLoggedIn"><span class="glyphicon glyphicon-shopping-cart"></span> My Cart</a></li>
-                    <li [routerLinkActive]="['active']"><a [routerLink]="['/cabinet']" *ngIf="authService.IsLoggedIn">Hello, {{authService.CurrentUserEmail}}</a></li>
-                    <li [routerLinkActive]="['active']" style="cursor: pointer"><a *ngIf="authService.IsLoggedIn" (click)="logOut()"><span class="glyphicon glyphicon-log-in"></span> Log Out</a></li>
-                    <li [routerLinkActive]="['active']"><a [routerLink]="['/signup']" *ngIf="!authService.IsLoggedIn"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                    <li [routerLinkActive]="['active']"><a [routerLink]="['/login']" *ngIf="!authService.IsLoggedIn"><span class="glyphicon glyphicon-log-in"></span> Log In</a></li>
+                    <li title="Click to switch to cart page" [routerLinkActive]="['active']"><a [routerLink]="['/cart']" *ngIf="authService.IsLoggedIn"><span class="glyphicon glyphicon-shopping-cart"></span> My Cart</a></li>
+                    <li title="Click to switch to cabinet page" [routerLinkActive]="['active']"><a [routerLink]="['/cabinet']" *ngIf="authService.IsLoggedIn">Hello, {{authService.CurrentUserEmail}}</a></li>
+                    <li title="Click to log out" [routerLinkActive]="['active']" style="cursor: pointer"><a *ngIf="authService.IsLoggedIn" (click)="logOut()"><span class="glyphicon glyphicon-log-in"></span> Log Out</a></li>
+                    <li title="Click to switch to sign up page" [routerLinkActive]="['active']"><a [routerLink]="['/signup']" *ngIf="!authService.IsLoggedIn"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                    <li title="Click to switch to log in page" [routerLinkActive]="['active']"><a [routerLink]="['/login']" *ngIf="!authService.IsLoggedIn"><span class="glyphicon glyphicon-log-in"></span> Log In</a></li>
                 </ul>
             </div>
         </div>
@@ -34,17 +34,17 @@
     </div>
     <footer class="footerstyle">
         <div class="containerimage">
-            <div class="texter">
-                <a class="foot" [routerLink]="['/questions']">Extra questions?</a>
+            <div class="texter" >
+                <a title="Click to ask additional question" class="foot" [routerLink]="['/questions']">Extra questions?</a>
             </div>
             <a style="display: inline" href="https://www.instagram.com/martha_bocharova/" class="footer-link">
-                <img class="footer-image" src='assets/images/Footer/instagram.png' />
+                <img title="Click to switch to our instagram page" class="footer-image" src='assets/images/Footer/instagram.png' />
             </a>
-            <a href="https://www.pinterest.com/pin/542754192577200718/" class="footer-link">
-                <img class="footer-image" src='assets/images/Footer/twitter-logo-silhouette.png' />
+            <a href="https://twitter.com/tatooroze" class="footer-link">
+                <img title="Click to switch to our twitter page" class="footer-image" src='assets/images/Footer/twitter-logo-silhouette.png' />
             </a>
             <a href="https://vk.com/id20028415" class="footer-link" style="margin-right:1%">
-                <img class="footer-image" src='assets/images/Footer/vk.png' />
+                <img  title="Click to switch to our vkontakte page" class="footer-image" src='assets/images/Footer/vk.png' />
             </a>
         </div>
     </footer>
